# bae

./: Cargo.toml
crates/bae-common/: Cargo.toml
crates/bae-common/src/: default.rs  from_attributes_meta.rs  lib.rs  parse.rs  private.rs  test_utils.rs  types_support.rs
crates/bae-common/src/wrappers/: fncall.rs  spanned_value.rs
crates/bae-derive/: Cargo.toml
crates/bae-derive-meta/: Cargo.toml
crates/bae-derive-meta/src/: lib.rs
crates/bae-derive/src/: enum_attribute.rs  from_attributes.rs  lib.rs
src/: default.rs  lib.rs  parse.rs  types_support.rs
src/wrappers/: mod.rs
tests/: test_attr_argument_duplicate.rs  test_attr_duplicate.rs  test_bae_attrs.rs  test_basic.rs  test_enum_attribute.rs  test_fn_call.rs  test_parse.rs  test_spanned_value.rs  util.rs
tests/compile_fail/: test_struct_unnamed.rs  test_struct_unnamed.stderr
