[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
description = "A Rust proc-macro attribute parser"
documentation = "https://docs.rs/bae"
edition = "2018"
homepage = "https://github.com/davidpdrsn/bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "bae"
readme = "README.md"
repository = "https://github.com/davidpdrsn/bae.git"
version = "0.1.7"

[features]
span-locations = ["proc-macro2/span-locations", "bae-common/span-locations"]

[dependencies]
bae-common = { version = "0.1.7", path = "crates/bae-common" }
bae-derive = { version = "0.1.7", path = "crates/bae-derive" }
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1" }
paste = "1.0"

[dev-dependencies]
quote = "1"
trybuild = "1"

[lib]
path = "src/lib.rs"

[[test]]
name = "test_spanned_value"
path = "tests/test_spanned_value.rs"
required-features = ["span-locations"]

[workspace]
