[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
description = "Common utilities and types for bae: A Rust proc-macro attribute parser"
documentation = "https://docs.rs/bae"
edition = "2018"
homepage = "https://github.com/davidpdrsn/bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "bae-common"
readme = "README.md"
repository = "https://github.com/davidpdrsn/bae.git"
version = "0.1.7"

[features]
span-locations = []

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1" }
paste = "1.0"

indexmap = "1.8"
quote = "1"
heck = "0.4"

[dev-dependencies]
bae = { version = "0.1.7", path = "../.." }

[lib]
path = "src/lib.rs"
