[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
description = "Derive macros for bae: A Rust proc-macro attribute parser"
documentation = "https://docs.rs/bae"
edition = "2018"
homepage = "https://github.com/davidpdrsn/bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "bae-derive"
readme = "README.md"
repository = "https://github.com/davidpdrsn/bae.git"
version = "0.1.7"

[dependencies]
bae-common = { version = "0.1.7", path = "../bae-common" }
bae-derive-meta = { version = "0.1.7", path = "../bae-derive-meta" }
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"

[lib]
proc-macro = true
path = "src/lib.rs"
doc = false
